grammar_to_ply/error_msgs.txt
../programs/c/toy_programs/output_programs/errors/floatsum_0_error.c:1:1: error: unknown type name 'Line'
Line no. 4: } missing
^
../programs/c/toy_programs/output_programs/errors/floatsum_0_error.c:1:8: error: expected ';' after top level declarator
Line no. 4: } missing
       ^
       ;
../programs/c/toy_programs/output_programs/errors/floatsum_0_error.c:1:13: error: extraneous closing brace ('}')
Line no. 4: } missing
            ^
../programs/c/toy_programs/output_programs/errors/floatsum_0_error.c:1:15: error: unknown type name 'missing'
Line no. 4: } missing
              ^
../programs/c/toy_programs/output_programs/errors/floatsum_0_error.c:2:5: error: expected ';' after top level declarator
Line no. 0: ( missing
    ^
    ;
5 errors generated.
